--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                     <a href="work.html" class="nav-link">My Work</a>
                 </li>
                 <li class="nav-item current">
-                    <a href="contact.html" class="nav-link">Howo To Reach Me</a>
+                    <a href="contact.html" class="nav-link">How To Reach Me</a>
                 </li>
             </ul>
         </nav>
